# cc-trafficlight

./: .gitignore  LICENSE  README.md
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: ghostty.rs  lib.rs  macos.rs  main.rs  state.rs  watcher.rs
app/ui/: common.css  pulse.html  pulse.js  widget.html  widget.js
docs/prototypes/: jump-action-bar-prototype.html
docs/superpowers/plans/: 2026-06-16-cc-trafficlight-impl.md  2026-06-23-jump-action-bar.md
docs/superpowers/specs/: 2026-06-12-cc-trafficlight-design.md  2026-06-22-jump-action-bar-design.md
hook/: cc-trafficlight-hook.sh  install.sh
hook/tests/: hook_test.sh
scripts/: build-install.sh  setup-selfsign.sh
